[package]
name = "describe_df"
version = "0.1.0"
edition = "2021"
description = "Panda-like describe as a cli tool"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4.18", features = ["derive", "string"] }
csv = "1.3.0"
ndarray = "0.15.6"
ordered-float = "4.2.0"
polars = "0.38.3"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
